# PluginTemplate

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  PluginTemplate.sln  README.md  ScriptDllTemplate.sln  cmake.toml  pluginconfig.h.in  pluginmain.h  templatefiles.txt
.github/workflows/: build.yml
PluginTemplate/: MyTemplate.vstemplate  PluginTemplate.vcxproj  plugin.cpp  plugin.h  pluginmain.cpp  pluginmain.h
PluginTemplate/command/: MyTemplate.vstemplate  plugin.cpp
PluginTemplate/exprfunc/: MyTemplate.vstemplate  plugin.cpp
PluginTemplate/minimal/: MyTemplate.vstemplate  plugin.cpp
PluginTemplate/pluginsdk/: x32bridge.lib  x32dbg.lib  x64bridge.lib  x64dbg.lib
ScriptDllTemplate/: MyTemplate.vstemplate  ScriptDllTemplate.vcxproj  ScriptDllTemplate.vcxproj.filters  main.cpp  main.h
ScriptDllTemplate/async/: MyTemplate.vstemplate  main.cpp
ScriptDllTemplate/pluginsdk/: x32bridge.lib
ScriptDllTemplate/sync/: MyTemplate.vstemplate  main.cpp
cmake/: x64dbg.cmake
src/: PluginDialog.cpp  PluginDialog.h  PluginDialog.ui  PluginMainWindow.cpp  PluginMainWindow.h  PluginMainWindow.ui  PluginTabWidget.cpp  PluginTabWidget.h  QtPlugin.cpp  QtPlugin.h  plugin.cpp  pluginmain.cpp  pluginmain.h  resource.qrc
